Kinda safe before descovering the bug

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,13 @@ section{
     padding: 5rem 10%;
 }
 
+@keyframes fadeIn {
+   0%{
+      transform: scale(0);
+      opacity: 0;
+   }
+}
+
 .heading-title{
    text-align: center;
    margin-bottom: 3rem;
@@ -86,8 +93,6 @@ section{
     color: var(--black);
     display: none;
 }
-
-
 
 .services .box-container{
    display: grid;
